--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "bunch of general-purpose functional utilities",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "grunt ci"
+    "test": "node_modules/.bin/gulp ci"
   },
   "repository": {
     "type": "git",
